# ansi_text

./: .gitignore  LICENSE  README.md  ansi_text.py  pyproject.toml  test_ansi.py
src/ansi_text/: __init__.py  ansi_text.py
tests/: test_ansi.py
