[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_YOUR_USERNAME_HERE"
version = "1.0"
authors = [
  { name="Timothy Salazar", email="tim@polytropos.ai" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/timothy-salazar/ansi_text"
"Bug Tracker" = "https://github.com/timothy-salazar/ansi_text/issues"